--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 
 # command to run tests
 script:
-  - coverage run --source='.' --omit='*wsgi.py' manage.py test djangoflow.tests
+  - coverage run --source='.' --omit='*wsgi.py' manage.py test activflow.tests
 
 after_success:
   - coveralls
