updated travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ python:
   - "2.7"
   - "3.4"
   - "3.5"
+  - "3.6"
 
 env:
   - DJANGO_VERSION=1.9
+  - DJANGO_VERSION=1.10
+  - DJANGO_VERSION=1.11
 
 # command to install dependencies
 install: 
